# CandyPane

./: Changelog.md  Contributing.md  README.md
CandyPane/: CMakeLists.txt
CandyPane/include/: SIZE.hpp  split.hpp
CandyPane/include/Account/: AccountButton.hpp
CandyPane/include/Category/: CategoriesList.hpp  NewListButton.hpp
CandyPane/include/DateTime/: Date.hpp  DateTimeModule.hpp  Time.hpp
CandyPane/include/Task/: CategoriesList.hpp  Category.hpp  CategoryList.hpp  NewListButton.hpp  Task.hpp
CandyPane/src/: split.cpp
CandyPane/src/Account/: AccountButton.cpp
CandyPane/src/Category/: CategoriesList.cpp  NewListButton.cpp
CandyPane/src/DateTime/: Date.cpp  DateTimeModule.cpp  Time.cpp
CandyPane/src/Task/: CategoriesList.cpp  Category.cpp  CategoryList.cpp  NewListButton.cpp  Task.cpp  TaskList.cpp
CandyPaneQt6/: CMakeLists.txt
CandyPaneQt6/include/: Application.hpp  ContextMenu.hpp  DraggableTaskWidget.hpp  ListPaneWidget.hpp  OverlayDraggableWidget.hpp  TaskPaneWidget.hpp  UpdatableWindow.hpp
CandyPaneQt6/include/Draggable/: DraggableWidget.hpp  DraggableWidgetsList.hpp  LineEditName.hpp  OverlayDraggableWidget.hpp  WidgetBackground.hpp
CandyPaneQt6/include/LeftPanel/: AccountWidget.hpp  CategoriesListWidget.hpp  CategoryWidget.hpp  LeftPanel.hpp  LineEditCategoryName.hpp  NewListDialog.hpp  NewListWidget.hpp  OverlayDraggableWidget.hpp
CandyPaneQt6/include/LeftPanel/Category/: CategoriesListWidget.hpp  CategoryContextMenu.hpp  CategoryListWidget.hpp  CategoryWidget.hpp  NewListWidget.hpp
CandyPaneQt6/include/MainTaskList/: MainTaskList.hpp  TaskListWidget.hpp
CandyPaneQt6/include/MainTaskList/Task/: NewTaskWidget.hpp  TaskContentsWidget.hpp  TaskContextMenu.hpp  TaskListWidget.hpp  TaskWidget.hpp
CandyPaneQt6/include/MainTaskList/Title/: TaskListTitle.hpp  TaskListTitleIcon.hpp  TaskListTitleName.hpp
CandyPaneQt6/include/Pane/: DraggableTaskWidget.hpp  TaskListPaneWidget.hpp  TaskPaneWidget.hpp
CandyPaneQt6/src/: Application.cpp  DraggableWidgetsList.cpp  UpdatableWindow.cpp  WidgetBackground.cpp  main.cpp
CandyPaneQt6/src/Draggable/: DraggableWidget.cpp  DraggableWidgetsList.cpp  OverlayDraggableWidget.cpp  WidgetBackground.cpp
CandyPaneQt6/src/LeftPanel/: CategoryListWidget.cpp  CategoryWidget.cpp  LeftPanel.cpp  LineEditCategoryName.cpp  NewListDialog.cpp  NewListWidget.cpp  OverlayDraggableWidget.cpp
CandyPaneQt6/src/LeftPanel/Category/: CategoryContextMenu.cpp  CategoryListWidget.cpp  CategoryWidget.cpp  LineEditCategoryName.cpp  NewListWidget.cpp
CandyPaneQt6/src/MainTaskList/: MainTaskList.cpp  TaskWidget.cpp
CandyPaneQt6/src/MainTaskList/Task/: NewTaskWidget.cpp  TaskContentsWidget.cpp  TaskContextMenu.cpp  TaskListWidget.cpp  TaskWidget.cpp
CandyPaneQt6/src/MainTaskList/Title/: TaskListTitle.cpp  TaskListTitleIcon.cpp  TaskListTitleName.cpp
include/: ListPane.hpp  POINT.hpp  TaskPane.hpp
include/Category/: Category.hpp
include/Task/: TaskList.hpp
